# gtk-transcribe

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  meson.build  meson_options.txt
.github/workflows/: ci.yml
build-aux/: dev.mnts.Transcription.Devel.json
data/: dev.mnts.Transcription.desktop.in.in  dev.mnts.Transcription.gschema.xml.in  dev.mnts.Transcription.metainfo.xml.in.in
data/resources/: resources.gresource.xml
data/resources/ui/: window.ui
po/: LINGUAS  POTFILES.in  en.po  gtk-transcription.pot  si.po
src/: application.rs  main.rs  whisper.rs  window.rs
