[package]
name = "gtk-transcription"
version = "0.1.0"
authors = ["Tine Jozelj <me@mnts.dev>"]
edition = "2021"

[profile.release]
lto = true

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.6", package = "gtk4", features = ["v4_8"] }
once_cell = "1.14"
tracing = "0.1.37"
tracing-subscriber = "0.3"
