[package]
name = "gtk-transcription"
version = "0.1.0"
authors = ["Tine Jozelj <me@mnts.dev>"]
edition = "2021"

[profile.release]
lto = true

[dependencies]
adw = { version = "0.4.4", package = "libadwaita", features = ["v1_2"] }
cpal = "0.15.2"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.6", package = "gtk4", features = ["v4_8"] }
once_cell = "1.14"
ringbuf = "0.3.3"
tracing = "0.1.37"
tracing-subscriber = "0.3"
whisper-rs = { version = "0.8.0", features = [] }
